Update Gradle, bump dependencies, update to Java 17 and minor code cleanup